# MacinRender-ADM-Core

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CppcheckSuppressions.txt  LICENSE  README.en.md  README.md
.github/workflows/: cache-maintenance.yml  ci.yml  iamf-bridge-prebuild.yml  quality.yml  release.yml  windows-bringup.yml
cmake/: MRDependencies.cmake  MRIamfAomBridge.cmake  MRStaticAnalysis.cmake  MRWarnings.cmake
docs/: README.md  THIRD_PARTY_LICENSES.md
docs/adr/: 0001-cpp-standard.md  0002-cpp-first-rust-later.md  0003-owned-domain-model-and-backend-boundaries.md  0004-third-party-dependency-management.md  0005-error-handling-model.md  0006-cli-argument-library.md  0007-c-abi-stability-policy.md
docs/architecture/: ADM_APPLE_BACKEND.md  ADM_FEATURE_COVERAGE.md  ADM_WINDOWS_SYSTEM_SPATIAL.md  CPP_ADM_PLATFORM_REWRITE.md  REALTIME_MONITORING.md  REALTIME_MONITORING_SLICE1.md  SEMANTIC_EDITOR_GUI.md
docs/guides/: CI.md  QUALITY.md
gui/: build-headtrack.sh  copy-native.sh  package-macos-gui-dev-app.sh  package-macos.sh
gui/MacinRender.Gui/: App.axaml  App.axaml.cs  MacinRender.Gui.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  SelfTest.cs  app.manifest
gui/MacinRender.Gui/Assets/: AppIcon.icns
gui/MacinRender.Gui/Controls/: SquircleBorder.cs  SquircleButton.cs
gui/MacinRender.Gui/Converters/: MeterConverters.cs
gui/MacinRender.Gui/I18n/: Localizer.cs
gui/MacinRender.Gui/Interop/: AdmEnums.cs  AdmJson.cs  AdmMonitor.cs  AdmProgressEventV2.cs  NativeMethods.cs  SafeHandles.cs
gui/MacinRender.Gui/Models/: Models.cs  OutputModel.cs
gui/MacinRender.Gui/Services/: AdmRenderService.cs  CharacterSkin.cs  MonitorModels.cs  MonitorService.cs  RenderModels.cs  SemanticModels.cs  SettingsStore.cs  SofaLibrary.cs  SpatialScene.cs
gui/MacinRender.Gui/Services/HeadTracking/: AirPodsMotionSource.cs  HeadTrackingManager.cs  IHeadTrackingSource.cs  ManualFreeLookSource.cs
gui/MacinRender.Gui/ViewModels/: MainWindowViewModel.cs  SemanticEditorViewModel.cs  SofaSelector.cs
gui/MacinRender.Gui/Views/: AboutWindow.axaml  AboutWindow.axaml.cs  ChannelMeterWindow.axaml  ChannelMeterWindow.axaml.cs  ExportErrorWindow.axaml  ExportErrorWindow.axaml.cs  SemanticEditorView.axaml  SemanticEditorView.axaml.cs  SpatialSceneControl.cs  SpatialWindow.axaml  SpatialWindow.axaml.cs
gui/native/: mr_headtrack.m
include/adm/: audio_io.h  c_api.h  capability.h  errors.h  io.h  live_override.h  logging.h  loudness.h  monitor.h  options.h  peak.h  progress.h  render.h  render_apple.h  render_binaural.h  render_ear.h  render_hoa.h  render_vbap.h  scene.h  semantic_policy.h  version.h
scripts/licenses/: _common.py  check_manifest.py  generate.py  sync_license_texts.py
scripts/quality/: check-all.sh  check-changed.sh  check-licenses.sh  check_gui_i18n.py  clang-tidy.sh  cppcheck.sh  format.sh
scripts/release/: package-gui-windows.ps1  package-gui.sh  package-linux-appimage.sh  package-linux-cli-appimage-release.sh  package-macos-cli-release.sh  package-macos-gui-release.sh  package-windows-cli-release.ps1  package-windows-gui-release.ps1  package-windows.ps1  package.sh  smoke-gui-package-windows.ps1  smoke-gui-package.sh  smoke-linux-appimage.sh  smoke-linux-cli-appimage-release.sh  smoke-macos-cli-release.sh  smoke-macos-gui-release.sh  smoke-package-windows.ps1  smoke-package.sh  smoke-windows-cli-release.ps1  smoke-windows-gui-release.ps1  version_metadata.py
src/adm_apple/: apple_layouts.h  avsamplebuffer_device.mm  spatial_mixer_renderer.cpp
src/adm_audio/: apac_io.cpp  audio_handles.cpp  audio_io.cpp  audio_io_internal.h  caf_io.cpp  flac_io.cpp  iamf_aom_bridge.h  iamf_io.cpp  metadata_io.cpp  opus_mka_io.cpp  wav_io.cpp
src/adm_c_api/: adm_c_api.cpp  bundle_stub.cpp
src/adm_cli/: apac_encode_command.cpp  backends_command.cpp  commands.h  export_command.cpp  formats_command.cpp  inspect_command.cpp  layouts_command.cpp  main.cpp  render_command.cpp
src/adm_core/: render_service.cpp  semantic_policy.cpp  version.cpp  version.cpp.in
src/adm_engine/: capability_json.cpp  capability_json.h  format_table.cpp  format_table.h  layout_table.cpp  layout_table.h  monitor_session.cpp  render_service.cpp  scene_json.cpp  scene_json.h  support_matrix.cpp  support_matrix.h
src/adm_io/: scene_importer.cpp
src/adm_loudness/: loudness_normalizer.cpp
src/adm_peak/: peak_limiter.cpp
src/adm_realtime/: audio_output_device.h  downmix_stream.h  miniaudio_device.cpp  monitor_engine.cpp  monitor_engine.h  render_stream_factory.h  ring_buffer.h
src/adm_render_binaural/: binaural_internal.h  binaural_renderer.cpp  binaural_spreader.cpp  binaural_spreader.h  binaural_test_probe.cpp  binaural_test_probe.h  spreader_mr.c  spreader_mr.h  spreader_mr_internal.h
src/adm_render_common/: render_common.cpp  render_common.h  speaker_layouts.cpp  speaker_layouts.h
src/adm_render_ear/: ear_renderer.cpp
src/adm_render_hoa/: hoa_renderer.cpp
src/adm_render_vbap/: vbap_renderer.cpp
src/adm_renderer_factory/: renderer_factory.cpp  renderer_factory.h
src/adm_windows/: spatialaudioclient_device.cpp  windows_layouts.h
tests/manual/: system_spatial_monitor_check.cpp
tests/unit/: adm_cli_smoke_test.cpp  adm_io_fixture_test.cpp  adm_io_smoke_test.cpp  apac_smoke_test.cpp  apple_renderer_smoke_test.cpp  binaural_render_fixture_test.cpp  c_api_fixture_test.cpp  c_api_header_smoke.c  core_smoke_test.cpp  ear_render_fixture_test.cpp  ear_render_smoke_test.cpp  flac_io_smoke_test.cpp  hoa_decode_fixture_test.cpp  hoa_encode_fixture_test.cpp  iamf_smoke_test.cpp  loudness_fixture_test.cpp  opus_mka_smoke_test.cpp  peak_limiter_fixture_test.cpp  realtime_stream_fixture_test.cpp  render_trim_fixture_test.cpp  scene_export_fixture_test.cpp  semantic_policy_test.cpp  test_portable.h  trim_file_smoke_test.cpp  vbap_smoke_test.cpp
tools/iamf_aom_bridge/: BUILD.bazel  README.md  mr_iamf_aom_bridge.cc  mr_iamf_aom_bridge.h  mr_iamf_aom_cancellable_encoder.cc  mr_iamf_aom_cancellable_encoder.h
